k8s/apps/leachnet/ln-database/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  labels:
    app: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "100Mi"
              cpu: "200m"
          ports:
          - containerPort: 1883
            protocol: TCP
            name: mqtt
          - containerPort: 8883
            protocol: TCP
            name: mqtts
          volumeMounts:
          - name: data
            mountPath: /mosquitto/data
          - name: certs
            mountPath: /mosquitto/certs
          - name: config
            mountPath: /mosquitto/config/mosquitto.conf
            readOnly: true
            subPath: mosquitto.conf
          - name: passwd
            mountPath: /mosquitto/secrets
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mosquitto
      - name: config
        configMap:
          name: mosquitto-config
      - name: passwd
        secret:
          secretName: mosquitto-passwd
      - name: certs
        secret:
          secretName: mosquitto-cert
