k8s/apps/leachnet/ln-database/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  ports:
  - name: mqtt
    port: 1883
    targetPort: mqtt
  - name: mqtts
    port: 8883
    targetPort: mqtts
  selector:
    app: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-np
spec:
  ports:
  - name: mqtt
    port: 1883
    nodePort: 1883
    protocol: TCP
    targetPort: mqtt
  selector:
    app: mosquitto
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
   - IPv6
   - IPv4
  type: NodePort
